add responsive layout

--- a/styles.css
+++ b/styles.css
@@ -101,3 +101,9 @@ input::-webkit-inner-spin-button {
 input[type=number] {
   -moz-appearance: textfield;
 }
+
+@media (max-width: 600px) {
+  .container {
+    height: 60vh;
+  }
+}
