--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,8 @@
   margin: 0;
   padding: 0;
   --font-family: "Roboto", sans-serif;
+  --text-color: orangered;
+  --menu-background: green;
 }
 
 * {
@@ -11,30 +13,45 @@
   margin: 0;
 }
 
+body,
+html {
+  height: 100%;
+  width: 100%;
+  margin: 0;
+}
+
 .container {
   display: flex;
   flex-direction: column;
-  /*align-items: center;*/
-  height: 100vh
+  width: 100vw;
+  height: 100%;
+  min-height: 100%;
+  box-sizing: border-box;
+  overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 .top {
   display: flex;
-  background-color: green;
+  position: sticky;
+  z-index: 1;
+  top: 0;
+  background-color: var(--menu-background);
+  color: var(--text-color);
   align-items: center;
-  gap: 16px;
+  gap: 15px;
   font-size: 1rem;
   font-weight: bold;
-  padding: 0.25rem;
+  padding: 0.2rem 0.7rem;
   -webkit-text-stroke-width: 0.5px;
   -webkit-text-stroke-color: black;
-  background-color: green;
-  color: orangered;
+
 
 }
 
 h1 {
   padding: 0.25rem;
+  font-size: 1.8rem;
   -webkit-text-stroke-width: 1px;
   -webkit-text-stroke-color: black;
   color: orangered;
@@ -43,24 +60,32 @@ h1 {
 
 .hud {
   display: flex;
-  flex-direction: row;
-  gap: 1rem;
+  flex-direction: column;
 }
 
 .wherethedragonlives {
-  flex-basis: auto;
-  flex-grow: 1;
   display: flex;
+  margin: auto;
   z-index: -1;
   align-items: center;
   align-self: center;
   justify-items: center;
 }
 
+.dragon {
+  position: relative;
+  float: right;
+  right: 0%
+}
+
 
 .answercontainer {
   display: flex;
+  flex-direction: column;
+  position: sticky;
+  bottom: 0px;
   justify-items: center;
+  z-index: 1;
   gap: 0rem;
   padding: 0.25rem;
   -webkit-text-stroke-width: 1px;
@@ -84,6 +109,7 @@ h1 {
     width: 2rem;
     align-self: center;
     font-size: 2rem;
+    font-weight: bold;
     border: 0;
     background-color: green;
     color: orangered;
@@ -110,4 +136,16 @@ input::-webkit-inner-spin-button {
 /* Firefox */
 input[type=number] {
   -moz-appearance: textfield;
+}
+
+/*fade out effect*/
+.fadeout {
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0s 2s, opacity 2s linear;
+}
+
+.fadereset {
+  visibility: visible;
+  opacity: 1;
 }
