--- a/styles.css
+++ b/styles.css
@@ -49,6 +49,17 @@ html {
 
 }
 
+.top button {
+  position: relative;
+  bottom: 0.1rem;
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: black;
+  color: orangered;
+  background: none;
+  border: none;
+  font-size: 2.5rem;
+}
+
 h1 {
   padding: 0.25rem;
   font-size: 1.8rem;
@@ -148,4 +159,29 @@ input[type=number] {
 .fadereset {
   visibility: visible;
   opacity: 1;
+}
+
+.menu {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: white;
+  border: 1px solid #ccc;
+  padding: 20px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  z-index: 1000;
+}
+
+.character-select {
+  display: grid;
+  grid-template-columns: 3rem 3rem 3rem 3rem 3rem;
+}
+
+.character-select button {
+  font-size: 2rem;
+}
+
+.hidden {
+  display: none;
 }
