--- a/styles.css
+++ b/styles.css
@@ -101,7 +101,7 @@ h1 {
 
 
   .answersmall {
-    margin: 0 auto 10px;
+    margin: 0 auto;
     display: flex;
     position: relative;
     left: 20px
@@ -162,6 +162,7 @@ input[type=number] {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 10px;
+  margin-top: 10px;
   padding: 5px 20px;
   max-width: 600px;
   align-self: center;
@@ -187,7 +188,7 @@ input[type=number] {
   background-color: orangered;
 }
 
-@media (max-height: 500px) {
+@media (max-height: 600px) {
   .keypad {
     visibility: hidden;
     height: 0px
