--- a/styles.css
+++ b/styles.css
@@ -100,7 +100,7 @@ h1 {
   box-shadow: 0px 0px 5px 4px rgba(0, 0, 0, 0.75);
 
 
-  .answersmall {
+  .answerSmall {
     margin: 0 auto;
     display: flex;
     position: relative;
@@ -145,7 +145,7 @@ input[type=number] {
   -moz-appearance: textfield;
 }
 
-/*fade out effect*/
+/* fade out effect*/
 .fadeout {
   visibility: hidden;
   opacity: 0;
@@ -157,7 +157,7 @@ input[type=number] {
   opacity: 1;
 }
 
-
+/* stuff to make keypad work */
 .keypad {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
