--- a/styles.css
+++ b/styles.css
@@ -111,7 +111,7 @@ h1 {
   box-shadow: 0px 0px 5px 4px rgba(0, 0, 0, 0.75);
 
 
-  .answerSmall {
+  .answersmall {
     margin: 0 auto;
     display: flex;
     position: relative;
