--- a/styles.css
+++ b/styles.css
@@ -173,20 +173,45 @@ input[type=number] {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background: white;
-  border: 1px solid #ccc;
-  padding: 20px;
+  background: var(--menu-background);
+  color: var(--text-color);
+  -webkit-text-stroke-color: black;
+  border-radius: 5px;
+  border: 3px solid darkgreen;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   z-index: 1000;
+  text-align: center;
+  padding: 10px 0;
+
+}
+
+.menu button {
+  font-size: 1.5rem;
+  background-color: limegreen;
+  margin-left: 3px;
+  border-color: green;
+  border-radius: 5px;
+  color: var(--text-color);
+  -webkit-text-stroke-width: 0.5px;
+  -webkit-text-stroke-color: black;
+}
+
+.menu h2 {
+  -webkit-text-stroke-width: 0.7px;
+  text-align: center;
+  padding-bottom: 10px;
 }
 
 .character-select {
   display: grid;
-  grid-template-columns: 3rem 3rem 3rem 3rem 3rem;
+  grid-template-columns: 3.5rem 3.5rem 3.5rem 3.5rem 3.5rem;
+  gap: 5px;
+  margin: 20px;
 }
 
 .character-select button {
   font-size: 2rem;
+
 }
 
 .hidden {
@@ -229,5 +254,28 @@ input[type=number] {
     visibility: hidden;
     height: 0px
   }
+}
 
+#splash {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(255, 255, 255, 0.8);
+  /* White semi-transparent */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 3rem;
+  color: #000;
+  z-index: 1000;
+  opacity: 0;
+  transition: opacity 0.5s ease;
+}
+
+/* Show splash screen with fading */
+.show {
+  opacity: 1;
+  display: flex;
 }
