--- a/styles.css
+++ b/styles.css
@@ -178,7 +178,7 @@ input[type=number] {
   -webkit-text-stroke-color: black;
   border-radius: 5px;
   border: 3px solid darkgreen;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 0px 15px 10px rgba(0, 0, 0, 0.75);
   z-index: 1000;
   text-align: center;
   padding: 10px 0;
@@ -258,24 +258,25 @@ input[type=number] {
 
 #splash {
   position: absolute;
-  top: 0;
-  left: 0;
+  top: 30%;
   width: 100%;
-  height: 100%;
   background: rgba(255, 255, 255, 0.8);
   /* White semi-transparent */
   display: flex;
   justify-content: center;
   align-items: center;
   font-size: 3rem;
-  color: #000;
-  z-index: 1000;
+  color: var(--text-color);
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: black;
   opacity: 0;
+  z-index: 1000;
   transition: opacity 0.5s ease;
 }
 
 /* Show splash screen with fading */
-.show {
+
+
+#splash.show {
   opacity: 1;
-  display: flex;
 }
